--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <div id="payment-modal">
                      <div id="payment-header">
                         <div id="payment-header-text">
-                           <h4 id="htext" style="text-align:center;">Tasties NFT Droph4>
+                           <h4 id="htext" style="text-align:center;">Tasties NFT Drop<h4>
                            <p class="offer">Total supply: 100 NFTs</p>
                            <script>
                               date = new Date();
