--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                         <div id="payment-info-text">
                            <p class="title1">Free Mint</p>
                            <p class="title2">Available:<span class="freemint"> 1 </span></p>
-                           <p class="offer" id="current_date">6/17/2022</p>
+                           <p class="title2">Date:<span class="freemint"> 6/18/2022 </span></p>
+                           
                            <p class="lead basket">
                            <span class="color">FREE:</span>
                            <span class="totalPrice"></span>+ ETH gas
