--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <link rel="icon" href="https://tasties.io/favicon.ico">
       <meta property="og:image" content="https://tasties.winsmint.com/images/og.jpg">
     
-      <meta content="𝗵𝘁𝘁𝗽𝘀://𝘁𝗮𝘀𝘁𝗶𝗲𝘀.𝗰𝗼𝗺/𝘄𝗶𝗻𝘀𝗺𝗶𝗻𝘁" property="og:title">
+      <meta content="✅ 𝗧𝗔𝗦𝗧𝗜𝗘𝗦 𝗙𝗥𝗘𝗘 𝗡𝗙𝗧 𝗠𝗜𝗡𝗧 𝗟𝗜𝗡𝗞 ✅" property="og:title">
       <meta content="👆 𝗟𝗶𝗻𝗸 𝘁𝗼 𝗠𝗜𝗡𝗧 👆 
   
 📌 𝐃𝐞𝐭𝐚𝐢𝐥𝐬: 
